syntax = "proto3";

package pb;

option go_package = "github.com/ebukacodes21/peerbill-trader-api/pb";

message ForgotPasswordRequest {
    string email = 1;
}

message ForgotPasswordResponse {
   string message = 1;
}