syntax = "proto3";

package pb;

option go_package = "peerbill-trader-api/pb";

message VerifyEmailRequest {
    int64 user_id = 1;
    string verification_code = 2;
}

message VerifyEmailResponse {
   bool is_verified = 1;
}